--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -11,23 +11,12 @@
     "vuid": "^1.0.0"
   },
   "scripts": {
-    "ui:start:agents": "npm run ui:start:agent1 & npm run ui:start:agent2 & npm run ui:start:agent3 & npm run ui:start:agent4 &",
-    "ui:start:agent1": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3401' PORT=3001 REACT_APP_PERSONAS_URL='http://localhost:4001' react-scripts start",
-    "ui:start:agent1_1": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3403' PORT=3003 REACT_APP_PERSONAS_URL='http://localhost:4003' react-scripts start",
-    "ui:start:agent2": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3402' PORT=3002 REACT_APP_PERSONAS_URL='http://localhost:4002' react-scripts start",
-    "ui:start:agent3": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3403' PORT=3003 REACT_APP_PERSONAS_URL='http://localhost:4003' react-scripts start",
-    "ui:start:agent4": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3404' PORT=3004 REACT_APP_PERSONAS_URL='http://localhost:4004' react-scripts start",
-    "kill-all-ui": "lsof -ti tcp:3001 | xargs kill && lsof -ti tcp:3002 | xargs kill && lsof -ti tcp:3003 | xargs kill && lsof -ti tcp:3004 | xargs kill",
+    "start": "REACT_APP_WEBSOCKET_INTERFACE='ws://localhost:3401' PORT=3001 react-scripts start",
     "build": "rm -rf ../ui && react-scripts build && mv ./build ../ui",
-    "build:holoscape-bundle": "rm -rf ../ui && react-scripts build && cd build && zip -r peer-chat-ui.zip * && mv peer-chat-ui.zip ../../../holoscape/example-bundles/identity-manager-peer-chat",
-    "build:holoscape": "rm -rf '/Users/philipbeadle/Library/Application Support/Holoscape-default/UIs/peer-chat' && react-scripts build && mv ./build '/Users/philipbeadle/Library/Application Support/Holoscape-default/UIs/peer-chat'",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "standard",
-    "clean": "rm -rf ../ui",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook",
-    "storybook:deploy": "storybook-to-ghpages"
+    "clean": "rm -rf ../ui"
   },
   "browserslist": [
     ">0.2%",
@@ -37,14 +26,6 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@sambego/storybook-state": "^1.3.6",
-    "@storybook/addon-actions": "^5.2.1",
-    "@storybook/addon-links": "^5.2.1",
-    "@storybook/addon-viewport": "^5.2.1",
-    "@storybook/addons": "^5.2.1",
-    "@storybook/react": "^5.2.1",
-    "@storybook/storybook-deployer": "^2.8.1",
-    "babel-loader": "^8.0.5",
-    "storybook-addon-specifications": "^2.1.5"
+    "babel-loader": "^8.0.5"
   }
 }
