--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.16",
   "description": "A fork of peer chat for holochain with all but the core chat functionality removed",
   "scripts": {
-    "hc:build": "rm -rf tmp-storage && mkdir -p ./dna && cd dna-src && hc package --strip-meta -o ../dna/basic-chat.dna.json",
+    "hc:build": "rm -rf tmp-storage && mkdir -p ./dna && cd dna-src && hc package -o ../dna/basic-chat.dna.json",
     "hc:start": "holochain -c ./conductor-config.toml",
     "hc:test": "cd dna-src && hc test"
   },
