--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "hc:build": "rm -rf tmp-storage && mkdir -p ./dna && cd dna-src && hc package -o ../dna/basic-chat.dna.json",
     "hc:start": "holochain -c ./conductor-config.toml",
-    "hc:test": "cd dna-src && hc test"
+    "hc:test": "cd dna-src && hc test",
+    "hc:make-holoscape": "npm run hc:build && cd ui-src && npm run build && cd .. && zip -r ui.zip ./ui"
   },
   "author": "Willem Olding (willem.olding@holo.host)",
   "license": "GPL-3"
