Set up for running multiple agents locally: Alice and Bob

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A fork of peer chat for holochain with all but the core chat functionality removed",
   "scripts": {
     "hc:build": "rm -rf tmp-storage && mkdir -p ./dna && cd dna-src && hc package -o ../dna/basic-chat.dna.json",
+    "hc:start:alice": "holochain -c ./conductor-config-alice.toml",
+    "hc:start:bob": "holochain -c ./conductor-config-bob.toml",
     "hc:start": "holochain -c ./conductor-config.toml",
     "hc:test": "sim2h_server & cd dna-src && TEST_NETWORK_TYPE=sim2h hc test",
-    "hc:make-holoscape": "npm run hc:build && rm ui.zip && rm -rf ./ui && cd ui-src && npm run build && cd .. && cd ./ui && zip -r ../ui.zip ./*"
+    "hc:make-holoscape": "npm run hc:build && rm ui.zip && rm -rf ./ui && cd ui-src && npm run build && cd .. && cd ./ui && zip -r ../ui.zip ./*",
+    "sim2h": "sim2h_server -m sim2h.log -p 9000"
   },
   "author": "Willem Olding (willem.olding@holo.host)",
   "license": "GPL-3"
